--- a/day9/5-numpy.ipynb
+++ b/day9/5-numpy.ipynb
@@ -155,8 +155,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-14T16:03:44.853132Z",
-     "start_time": "2026-01-14T16:03:44.847125Z"
+     "end_time": "2026-01-14T16:13:32.174248Z",
+     "start_time": "2026-01-14T16:13:32.169509Z"
     }
    },
    "cell_type": "code",
@@ -180,16 +180,15 @@
     {
      "data": {
       "text/plain": [
-       "array([[1., 1., 1.],\n",
-       "       [1., 1., 1.]])"
+       "array([0., 0.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 19
   },
   {
    "metadata": {
