--- a/day10_test/test.ipynb
+++ b/day10_test/test.ipynb
@@ -2,14 +2,161 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.ones((1,2))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "30daa439",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 4, 5, 6)\n",
+      "(3, 6, 4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.ones((3, 4, 5, 6))\n",
+    "print(arr.shape)\n",
+    "# 表⽰把3轴滚动到1轴的位置\n",
+    "arr1 = np.rollaxis(arr, 3, 1)\n",
+    "print(arr1.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "122e75f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3, 4]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(False == 0)\n",
+    "arr2 = np.arange(1,5)\n",
+    "# arr2 = arr2[np.newaxis, :]\n",
+    "arr2 = arr2.reshape(1,-1)    \n",
+    "arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b1925da",
+   "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "def quick_sort(arr):\n",
+    "    \"\"\"\n",
+    "    手写快速排序（原地、递归）\n",
+    "    平均时间复杂度 O(n log n)，最坏 O(n^2)\n",
+    "    \"\"\"\n",
+    "    def _partition(lo, hi):\n",
+    "        # 选最右侧元素作为基准\n",
+    "        pivot = arr[hi]\n",
+    "        i = lo - 1\n",
+    "        for j in range(lo, hi):\n",
+    "            if arr[j] <= pivot:\n",
+    "                i += 1\n",
+    "                arr[i], arr[j] = arr[j], arr[i]\n",
+    "        arr[i + 1], arr[hi] = arr[hi], arr[i + 1]\n",
+    "        return i + 1\n",
+    "\n",
+    "    def _quick_sort(lo, hi):\n",
+    "        if lo < hi:\n",
+    "            p = _partition(lo, hi)\n",
+    "            _quick_sort(lo, p - 1)\n",
+    "            _quick_sort(p + 1, hi)\n",
+    "\n",
+    "    _quick_sort(0, len(arr) - 1)\n",
+    "    return arr\n",
+    "\n",
+    "\n",
+    "# 测试示例\n",
+    "if __name__ == \"__main__\":\n",
+    "    nums = [5, 2, 9, 4, 7, 6, 1, 3, 8]\n",
+    "    quick_sort(nums)\n",
+    "    print(\"排序结果:\", nums)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7b0eeb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 手写堆排实现\n",
+    "def heapify(arr, n, i):\n",
+    "    # 维护以i为根节点的子树的最大堆性质\n",
+    "    largest = i\n",
+    "    left = 2 * i + 1\n",
+    "    right = 2 * i + 2\n",
+    "\n",
+    "    if left < n and arr[left] > arr[largest]:\n",
+    "        largest = left\n",
+    "\n",
+    "    if right < n and arr[right] > arr[largest]:\n",
+    "        largest = right\n",
+    "\n",
+    "    if largest != i:\n",
+    "        arr[i], arr[largest] = arr[largest], arr[i]\n",
+    "        heapify(arr, n, largest)\n",
+    "\n",
+    "def heap_sort(arr):\n",
+    "    n = len(arr)\n",
+    "\n",
+    "    # 构建最大堆\n",
+    "    for i in range(n // 2 - 1, -1, -1):\n",
+    "        heapify(arr, n, i)\n",
+    "\n",
+    "    # 依次将堆顶元素放到数组末尾并重新调整堆\n",
+    "    for i in range(n - 1, 0, -1):\n",
+    "        arr[0], arr[i] = arr[i], arr[0]\n",
+    "        heapify(arr, i, 0)\n",
+    "\n",
+    "    return arr\n"
    ]
   }
  ],
@@ -22,14 +169,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
