--- a/day11_test/test.ipynb
+++ b/day11_test/test.ipynb
@@ -1,5 +1,19 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f4b3950",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "a = pd.Series([1,2,3],index=['a','b','c'])\n",
+    "b = pd.DataFrame([[1,2,3],[4,5,6]],index=['a','b'],columns=['c','d','e'])\n",
+    "print(a,'\\n'*2,b)\n"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
