--- a/day11_test/test.ipynb
+++ b/day11_test/test.ipynb
@@ -2,21 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6f4b3950",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "dtype: int64 \n",
+      "\n",
+      "    c  d  e\n",
+      "a  1  2  3\n",
+      "b  4  5  6\n",
+      "\n",
+      "a    1\n",
+      "b    4\n",
+      "Name: c, dtype: int64\n",
+      "   c  d\n",
+      "a  1  2\n",
+      "b  4  5\n",
+      "********************\n",
+      "c    1\n",
+      "d    2\n",
+      "e    3\n",
+      "Name: a, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "a = pd.Series([1,2,3],index=['a','b','c'])\n",
     "b = pd.DataFrame([[1,2,3],[4,5,6]],index=['a','b'],columns=['c','d','e'])\n",
-    "print(a,'\\n'*2,b)\n"
+    "print(a,'\\n'*2,b,end = '\\n'*2)\n",
+    "print(b['c'])\n",
+    "print(b[['c','d']])\n",
+    "print('*'*20)\n",
+    "print(b.iloc[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ef2d2387",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   c  d  e  q  w\n",
+      "a  1  2  3  1  2\n",
+      "b  4  5  6  2  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "b['q'] = [1,2]\n",
+    "print(b)\n",
+    "b['w'] = b['q']+1\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
