--- a/day11_test/test.ipynb
+++ b/day11_test/test.ipynb
@@ -135,6 +135,37 @@
     "print(df.info())\n",
     "print(df_drop_dup_by_col.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c59add1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. 创建一个数据表\n",
+    "data = {\n",
+    "\"name\": [\"Alice\", \"Bob\", \"Charlie\", \"David\", \"Eva\", \"Frank\"],\n",
+    "\"age\": [20, 22, 21, 20, 20, np.nan],\n",
+    "\"score\": [85, 90, np.nan, 92, 85, np.nan],\n",
+    "\"gender\": [\"女\", \"男\", \"男\", np.nan, np.nan,np.nan]\n",
+    "}\n",
+    "df = pd.DataFrame(data, index=['s1', 's2', 's3', 's4', 's5',\n",
+    "'s6'], columns=['name', 'age', 'score', 'gender'])\n",
+    "print(df)\n",
+    "# 2. 检测缺失值\n",
+    "print(df.isnull())\n",
+    "# 3. 计算缺失个数\n",
+    "print(\"每一列缺失个数:\")\n",
+    "print(df.isnull().sum())\n",
+    "print(\"每一行缺失个数:\")\n",
+    "print(df.isnull().sum(axis=1))\n",
+    "# 4. 计算缺失率\n",
+    "print(\"每一列缺失率:\")\n",
+    "print(df.isnull().sum() / len(df))\n",
+    "print(\"每一行缺失率:\")\n",
+    "print(df.isnull().sum(axis=1) / len(df.columns))"
+   ]
   }
  ],
  "metadata": {
