test: 更新测试文件中的执行计数和输出结果
更新了测试文件中的执行计数以保持顺序一致，并修改了部分测试用例的输出结果以反映预期的测试行为。新增了对NaN值的检测输出，以验证缺失值处理逻辑的正确性。

--- a/day10_test/test1.ipynb
+++ b/day10_test/test1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f83e3e86",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "94d2b2ff",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "c3eb7445",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "8d2bcba3",
    "metadata": {},
    "outputs": [
@@ -102,17 +102,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[9 7 5 0]\n",
-      "  [6 8 6 0]]\n",
+      "[[[5 7 8 5]\n",
+      "  [4 7 6 5]]\n",
       "\n",
-      " [[6 1 9 8]\n",
-      "  [2 9 7 8]]] \n",
+      " [[4 0 0 5]\n",
+      "  [9 8 9 2]]] \n",
       " --------------------\n",
-      "[[[7 5 0]\n",
-      "  [8 6 0]]\n",
+      "[[[7 8 5]\n",
+      "  [7 6 5]]\n",
       "\n",
-      " [[1 9 8]\n",
-      "  [9 7 8]]]\n"
+      " [[0 0 5]\n",
+      "  [8 9 2]]]\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "bbdea221",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "b2cf29bb",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "38032c55",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "a2b9547d",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "50896e8f",
    "metadata": {},
    "outputs": [
@@ -298,6 +298,8 @@
      "text": [
       "[[3.5 2.  7.  6.  7. ]\n",
       " [3.5 2.  7.  6.  7. ]]\n",
+      "[[False False  True False False]\n",
+      " [False  True False False False]]\n",
       "[[1. 2. 7. 4. 5.]\n",
       " [6. 2. 7. 8. 9.]]\n"
      ]
@@ -308,6 +310,7 @@
     "col_mean = np.nanmean(a, axis=0)\n",
     "col_mean = np.repeat(col_mean.reshape(1, -1), a.shape[0], axis=0)\n",
     "print(col_mean)\n",
+    "print(np.isnan(a))\n",
     "a = np.where(np.isnan(a), col_mean, a)\n",
     "print(a)\n"
    ]
