--- a/day11/1-pandas.ipynb
+++ b/day11/1-pandas.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "9f415b22",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "ca3f7edc",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "839b0450",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "39e5741e",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
        "2   ww      男     190"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "aa8bc5d8",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "789f7101",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "0a0ae217",
    "metadata": {},
    "outputs": [
@@ -447,8 +447,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\41507\\AppData\\Local\\Temp\\ipykernel_20444\\1516191600.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  print(s1[0])\n"
+      "C:\\Users\\dell\\AppData\\Local\\Temp\\ipykernel_7648\\3278717409.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  print(s1[0])  #未来版本中，s1[0]将被视为标签，而不是位置索引\n"
      ]
     }
    ],
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "id": "9d2c12db",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "a7bafb20",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
       "c2    5\n",
       "c3    6\n",
       "c4    7\n",
-      "Name: s2, dtype: int32\n"
+      "Name: s2, dtype: int64\n"
      ]
     }
    ],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "id": "52b86496",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
       "c2    5\n",
       "c3    6\n",
       "c4    7\n",
-      "Name: s2, dtype: int32\n",
+      "Name: s2, dtype: int64\n",
       "通过位置索引获取多行数据:\n",
       "    c1  c2  c3  c4\n",
       "s1   0   1   2   3\n",
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "88c07850",
    "metadata": {},
    "outputs": [
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "df45cc3e",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "id": "b1e949b7",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "id": "8df3b8fe",
    "metadata": {},
    "outputs": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "id": "3a61fbeb",
    "metadata": {},
    "outputs": [
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "id": "51991c5f",
    "metadata": {},
    "outputs": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "id": "ee527d7c",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "id": "6d5ae2ca",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "id": "21cc6034",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1163,7 @@
        "s6    Frank  20.6   88.0      男"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "id": "262a59cd",
    "metadata": {},
    "outputs": [
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "id": "e7de8ecd",
    "metadata": {},
    "outputs": [
@@ -1262,15 +1262,21 @@
       "c3    3\n",
       "c4    3\n",
       "dtype: int64\n",
+      "c1    3\n",
+      "c2    3\n",
+      "c3    3\n",
+      "c4    3\n",
+      "dtype: int64\n",
       "c1     8\n",
       "c2     9\n",
       "c3    10\n",
       "c4    11\n",
-      "dtype: int32\n",
+      "dtype: int64\n",
       "s1    4\n",
       "s2    4\n",
       "s3    4\n",
-      "dtype: int64\n"
+      "dtype: int64\n",
+      "<class 'pandas.core.series.Series'>\n"
      ]
     }
    ],
@@ -1284,12 +1290,13 @@
     "\n",
     "# 1. 统计每个列的数据个数\n",
     "print(df.apply(lambda x: x.count(), axis=0))        # 默认轴是0，即列\n",
-    "\n",
+    "print(df.apply(lambda x: x.count()))        # 默认轴是0，即列\n",
     "# 2. 统计每个列的最大值\n",
     "print(df.apply(lambda x: x.max(), axis=0))          # 默认轴是0，即列\n",
     "\n",
     "# 3. 统计每个行的数据个数\n",
-    "print(df.apply(lambda x: x.count(), axis=1))        # 轴1, 是行"
+    "print(df.apply(lambda x: x.count(), axis=1))        # 轴1, 是行\n",
+    "print(type(df.apply(lambda x: x.count(), axis=1)))"
    ]
   },
   {
@@ -1303,13 +1310,13 @@
      "output_type": "stream",
      "text": [
       "     A    B    C    D\n",
-      "0  3.0  1.0  3.0  3.0\n",
-      "1  1.0  2.0  4.0  NaN\n",
-      "2  2.0  NaN  1.0  NaN\n",
-      "A    3\n",
+      "0  2.0  2.0  1.0  3.0\n",
+      "1  2.0  NaN  2.0  4.0\n",
+      "2  NaN  2.0  4.0  4.0\n",
+      "A    2\n",
       "B    2\n",
       "C    3\n",
-      "D    1\n",
+      "D    3\n",
       "dtype: int64\n"
      ]
     }
@@ -1391,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 60,
    "id": "2d8ddfee",
    "metadata": {
     "ExecuteTime": {
@@ -1431,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 61,
    "id": "3126b0da",
    "metadata": {},
    "outputs": [
@@ -1443,7 +1450,7 @@
       "c2    8\n",
       "c3    8\n",
       "c4    8\n",
-      "dtype: int32\n"
+      "dtype: int64\n"
      ]
     }
    ],
@@ -1463,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "id": "bd2cb8ab",
    "metadata": {},
    "outputs": [
@@ -1472,13 +1479,13 @@
      "output_type": "stream",
      "text": [
       "         c1        c2        c3        c4\n",
-      "0  0.082453  1.575128  0.892916 -0.319503\n",
-      "1  0.594613 -0.044185 -0.330633 -1.352605\n",
-      "2 -0.166985  0.115764 -1.496886  2.484405\n",
+      "0  0.851165 -1.868064 -1.994616 -0.825737\n",
+      "1  0.171057 -0.438533 -0.410428 -0.525007\n",
+      "2 -1.585138  0.039411  0.638786  0.681125\n",
       "      c1     c2     c3     c4\n",
-      "0   0.08   1.58   0.89  -0.32\n",
-      "1   0.59  -0.04  -0.33  -1.35\n",
-      "2  -0.17   0.12  -1.50   2.48\n"
+      "0   0.85  -1.87  -1.99  -0.83\n",
+      "1   0.17  -0.44  -0.41  -0.53\n",
+      "2  -1.59   0.04   0.64   0.68\n"
      ]
     }
    ],
@@ -1506,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "id": "12a032ac",
    "metadata": {},
    "outputs": [
@@ -1612,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "id": "5122fd08",
    "metadata": {},
    "outputs": [
@@ -1657,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "id": "bb5b031e",
    "metadata": {},
    "outputs": [
@@ -1672,7 +1679,7 @@
       "s4    David   20     92      男\n",
       "s5      Eva   20     82      女\n",
       "s6    Frank   30     72      男\n",
-      "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x00000270FFF1A210>\n",
+      "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001B71E56F6E0>\n",
       "分组之后统计:\n",
       "         age                                                 score        \\\n",
       "       count   mean       std   min    25%   50%   75%   max count  mean   \n",
@@ -1720,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "id": "8c3d4a50",
    "metadata": {},
    "outputs": [
@@ -1747,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 67,
    "id": "5a0ba961",
    "metadata": {},
    "outputs": [
@@ -1755,13 +1762,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       name gender  score  score_mean\n",
-      "s1    Alice      女     85        83.5\n",
-      "s2      Bob      男     90        85.5\n",
-      "s3  Charlie      男     88        85.5\n",
-      "s4    David      男     92        85.5\n",
-      "s5      Eva      女     82        83.5\n",
-      "s6    Frank      男     72        85.5\n",
+      "s1    83.5\n",
+      "s2    85.5\n",
+      "s3    85.5\n",
+      "s4    85.5\n",
+      "s5    83.5\n",
+      "s6    85.5\n",
+      "Name: score, dtype: float64\n",
       "       name gender  score  score_minus_mean\n",
       "s1    Alice      女     85               1.5\n",
       "s2      Bob      男     90               4.5\n",
@@ -1782,7 +1789,7 @@
    "source": [
     "# 4. 分组之后进行转换\n",
     "df[\"score_mean\"] = df.groupby(\"gender\")[\"score\"].transform('mean')\n",
-    "print(df[[\"name\", \"gender\", \"score\", \"score_mean\"]])\n",
+    "print(df.groupby(\"gender\")[\"score\"].transform('mean'))\n",
     "df[\"score_minus_mean\"] = df[\"score\"]-df.groupby(\"gender\")[\"score\"].transform('mean')\n",
     "print(df[[\"name\", \"gender\", \"score\", \"score_minus_mean\"]])\n",
     "\n",
