--- a/day11_test/test.ipynb
+++ b/day11_test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "6f4b3950",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "ef2d2387",
    "metadata": {},
    "outputs": [
@@ -54,9 +54,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   c  d  e  q  w\n",
-      "a  1  2  3  1  2\n",
-      "b  4  5  6  2  3\n"
+      "   c  d  e  q\n",
+      "a  1  2  3  1\n",
+      "b  4  5  6  2\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "1efe53d5",
    "metadata": {},
    "outputs": [
@@ -138,11 +138,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4c59add1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       name   age  score gender\n",
+      "s1    Alice  20.0   85.0      女\n",
+      "s2      Bob  22.0   90.0      男\n",
+      "s3  Charlie  21.0    NaN      男\n",
+      "s4    David  20.0   92.0    NaN\n",
+      "s5      Eva  20.0   85.0    NaN\n",
+      "s6    Frank   NaN    NaN    NaN\n",
+      "     name    age  score  gender\n",
+      "s1  False  False  False   False\n",
+      "s2  False  False  False   False\n",
+      "s3  False  False   True   False\n",
+      "s4  False  False  False    True\n",
+      "s5  False  False  False    True\n",
+      "s6  False   True   True    True\n",
+      "每一列缺失个数:\n",
+      "name      0\n",
+      "age       1\n",
+      "score     2\n",
+      "gender    3\n",
+      "dtype: int64\n",
+      "每一行缺失个数:\n",
+      "s1    0\n",
+      "s2    0\n",
+      "s3    1\n",
+      "s4    1\n",
+      "s5    1\n",
+      "s6    3\n",
+      "dtype: int64\n",
+      "每一列缺失率:\n",
+      "name      0.000000\n",
+      "age       0.166667\n",
+      "score     0.333333\n",
+      "gender    0.500000\n",
+      "dtype: float64\n",
+      "每一行缺失率:\n",
+      "s1    0.00\n",
+      "s2    0.00\n",
+      "s3    0.25\n",
+      "s4    0.25\n",
+      "s5    0.25\n",
+      "s6    0.75\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
     "# 1. 创建一个数据表\n",
     "data = {\n",
     "\"name\": [\"Alice\", \"Bob\", \"Charlie\", \"David\", \"Eva\", \"Frank\"],\n",
@@ -165,6 +215,27 @@
     "print(df.isnull().sum() / len(df))\n",
     "print(\"每一行缺失率:\")\n",
     "print(df.isnull().sum(axis=1) / len(df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "948de14e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    'C': ['a', 'b', 'c', 'd', 'e']\n",
+    "})\n",
+    "print(type(df['C']))"
    ]
   }
  ],
