--- a/day11_test/test1.ipynb
+++ b/day11_test/test1.ipynb
@@ -2,8 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "id": "6f0e4b6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c6e03d0e",
+   "metadata": {},
+   "source": [
+    "### 1、练习python列表，字典转series与df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68255c89",
    "metadata": {},
    "outputs": [
     {
@@ -13,20 +31,232 @@
       "a    1\n",
       "b    2\n",
       "c    3\n",
-      "dtype: int64 \n",
-      "\n",
-      "    c  d  e\n",
-      "a  1  2  3\n",
-      "b  4  5  6\n"
+      "dtype: int64\n",
+      "   a  b  c\n",
+      "0  1  2  3\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "a = pd.Series([1,2,3],index=['a','b','c'])\n",
-    "b = pd.DataFrame([[1,2,3],[4,5,6]],index=['a','b'],columns=['c','d','e'])\n",
-    "print(a,'\\n'*2,b)\n"
+    "dic = {'a': 1, 'b': 2, 'c': 3}\n",
+    "s = pd.Series(dic)\n",
+    "print(s)\n",
+    "df = pd.DataFrame([dic])\n",
+    "print(df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c9ee31b",
+   "metadata": {},
+   "source": [
+    "### 2、练习series和df的索引操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfbb7611",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "dtype: int64\n",
+      "\n",
+      "2\n",
+      "\n",
+      "2\n",
+      "\n",
+      "a    1\n",
+      "b    2\n",
+      "dtype: int64\n",
+      "\n",
+      "a    1\n",
+      "b    2\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = pd.Series([1, 2, 3], index=['a', 'b', 'c'])\n",
+    "print(s, s.loc['b'], s.iloc[1], s.loc[['a', 'b']], s.iloc[[0, 1]], sep='\\n'*2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a9df975",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     a  b\n",
+      "001  1  4\n",
+      "002  2  5\n",
+      "003  3  6\n",
+      "\n",
+      "a    1\n",
+      "b    4\n",
+      "Name: 001, dtype: int64\n",
+      "\n",
+      "     a  b\n",
+      "001  1  4\n",
+      "002  2  5\n",
+      "\n",
+      "a    1\n",
+      "b    4\n",
+      "Name: 001, dtype: int64\n",
+      "\n",
+      "     a  b\n",
+      "001  1  4\n",
+      "002  2  5\n",
+      "\n",
+      "001    1\n",
+      "002    2\n",
+      "003    3\n",
+      "Name: a, dtype: int64\n",
+      "\n",
+      "     a  b\n",
+      "001  1  4\n",
+      "002  2  5\n",
+      "003  3  6\n",
+      "\n",
+      "5      a  b\n",
+      "002  2  5\n",
+      "003  3  6\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'a': [1, 2, 3], 'b': [4, 5, 6]},\n",
+    "                  index=['001', '002', '003'])\n",
+    "print(df, df.loc['001'], df.loc[['001', '002']], df.iloc[0],\n",
+    "      df.iloc[0:2], sep='\\n'*2, end='\\n'*2)  # row\n",
+    "print(df['a'], df[['a', 'b']], sep='\\n'*2, end='\\n'*2)  # col\n",
+    "print(df.iloc[1, 1], df.iloc[[1, 2], [0, 1]])  # loc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cea5b6f",
+   "metadata": {},
+   "source": [
+    "### 3、完成重复值去除，缺失值删除，缺失值填充练习"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "804fcc63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a1</td>\n",
+       "      <td>b1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a2</td>\n",
+       "      <td>b2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>a1</td>\n",
+       "      <td>b3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    a   b\n",
+       "0  a1  b1\n",
+       "1  a2  b2\n",
+       "2  a1  b3"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    'a': ['a1', 'a2', 'a1'],\n",
+    "    'b': ['b1', 'b2', 'b3']\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "bc81e871",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    False\n",
+      "1    False\n",
+      "2     True\n",
+      "dtype: bool\n",
+      "    a   b\n",
+      "0  a1  b1\n",
+      "1  a2  b2\n"
+     ]
+    }
+   ],
+   "source": [
+    "d_col_sta = df.duplicated(subset=['a'], keep='first')\n",
+    "print(d_col_sta)\n",
+    "d_col = df.drop_duplicates(subset=['a'], keep='first')\n",
+    "print(d_col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbbe8224",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
