test(day11_test): 添加数据处理示例并更新测试输出
添加numpy导入并扩展测试用例，展示pandas数据处理功能
包括去重、空值检测和处理操作

--- a/day11_test/test1.ipynb
+++ b/day11_test/test1.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "id": "6f0e4b6b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "68255c89",
    "metadata": {},
    "outputs": [
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "cfbb7611",
    "metadata": {},
    "outputs": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "1a9df975",
    "metadata": {},
    "outputs": [
@@ -153,86 +154,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "804fcc63",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>a</th>\n",
-       "      <th>b</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>a1</td>\n",
-       "      <td>b1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>a2</td>\n",
-       "      <td>b2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>a1</td>\n",
-       "      <td>b3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    a   b\n",
-       "0  a1  b1\n",
-       "1  a2  b2\n",
-       "2  a1  b3"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data = {\n",
-    "    'a': ['a1', 'a2', 'a1'],\n",
-    "    'b': ['b1', 'b2', 'b3']\n",
-    "}\n",
-    "df = pd.DataFrame(data)\n",
-    "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "bc81e871",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "    a   b\n",
+      "0  a1  b1\n",
+      "1  a2  b2\n",
+      "2  a1  b3\n",
+      "\n",
       "0    False\n",
       "1    False\n",
       "2     True\n",
@@ -244,18 +178,71 @@
     }
    ],
    "source": [
-    "d_col_sta = df.duplicated(subset=['a'], keep='first')\n",
-    "print(d_col_sta)\n",
-    "d_col = df.drop_duplicates(subset=['a'], keep='first')\n",
-    "print(d_col)"
+    "data = {\n",
+    "    'a': ['a1', 'a2', 'a1'],\n",
+    "    'b': ['b1', 'b2', 'b3']\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df, end='\\n\\n')\n",
+    "\n",
+    "print(df.duplicated(subset=['a']))\n",
+    "df_col = df.drop_duplicates(subset=['a'], keep='first')\n",
+    "print(df_col)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "cbbe8224",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     a  b\n",
+      "0   a1  1\n",
+      "1  NaN  2\n",
+      "2   a3  3\n",
+      "\n",
+      "       a      b\n",
+      "0  False  False\n",
+      "1   True  False\n",
+      "2  False  False\n",
+      "0    0\n",
+      "1    1\n",
+      "2    0\n",
+      "dtype: int64\n",
+      "\n",
+      "    a  b\n",
+      "0  a1  1\n",
+      "2  a3  3\n",
+      "    a  b\n",
+      "0  a1  1\n",
+      "1  na  2\n",
+      "2  a3  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    'a': ['a1', np.nan, 'a3'],\n",
+    "    'b': [1, 2, 3]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df, end='\\n\\n')\n",
+    "\n",
+    "print(df.isnull(), df.isnull().sum(axis=1), sep='\\n',end='\\n\\n')\n",
+    "df_drop = df.dropna(axis=0)\n",
+    "print(df_drop)\n",
+    "df_fill_na = df.fillna('na')\n",
+    "print(df_fill_na)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f0941a4",
+   "metadata": {},
    "source": []
   }
  ],
