--- a/day13/1-KNN实战Facebook数据-网格搜索.ipynb
+++ b/day13/1-KNN实战Facebook数据-网格搜索.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "f0e5a3f9",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "d5ca2056672cdd19",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "12f88683",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "add2d3df",
    "metadata": {},
    "outputs": [
@@ -160,11 +160,11 @@
       "4932578245     863\n",
       "5606572086     656\n",
       "              ... \n",
-      "7416620189       1\n",
-      "9268607208       1\n",
-      "2728953923       1\n",
-      "8242450582       1\n",
-      "7606529344       1\n",
+      "1211672581       1\n",
+      "2305788054       1\n",
+      "4506029517       1\n",
+      "5843601955       1\n",
+      "9076695703       1\n",
       "Name: count, Length: 805, dtype: int64\n",
       "\n",
       "重复数目统计：\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "9c69dd8f366e7cdf",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "073089b9",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "50f523f1",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\41507\\AppData\\Roaming\\Python\\Python312\\site-packages\\sklearn\\model_selection\\_split.py:805: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=3.\n",
+      "e:\\python312\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:813: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=3.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -331,11 +331,11 @@
       "最佳模型在测试集上的准确率：0.4953\n",
       "\n",
       "所有参数组合的结果：\n",
-      "{'mean_fit_time': array([0.0070281 , 0.00831183, 0.00861367, 0.00970062, 0.00801539,\n",
-      "       0.00884779, 0.00907644, 0.00935157, 0.01090384, 0.01386356]), 'std_fit_time': array([0.00041075, 0.00158332, 0.00053625, 0.00105324, 0.00163843,\n",
-      "       0.00103237, 0.00081945, 0.00047131, 0.00231333, 0.00371354]), 'mean_score_time': array([0.14692473, 0.05114015, 0.14773734, 0.07651862, 0.14287106,\n",
-      "       0.08553179, 0.15035446, 0.09148113, 0.14140304, 0.0788819 ]), 'std_score_time': array([0.01285939, 0.00175867, 0.00479987, 0.00347664, 0.01267991,\n",
-      "       0.00491605, 0.00595782, 0.00437471, 0.00714889, 0.0027402 ]), 'param_n_neighbors': masked_array(data=[3, 3, 5, 5, 7, 7, 9, 9, 11, 11],\n",
+      "{'mean_fit_time': array([0.01368531, 0.0150574 , 0.01186784, 0.01412535, 0.01091162,\n",
+      "       0.01214266, 0.01336177, 0.01032639, 0.01100938, 0.01229294]), 'std_fit_time': array([0.00066551, 0.0011102 , 0.00071944, 0.00120557, 0.00057757,\n",
+      "       0.00106632, 0.00097676, 0.00062589, 0.00099363, 0.00047886]), 'mean_score_time': array([0.04881763, 0.10847902, 0.06652594, 0.12148134, 0.06968888,\n",
+      "       0.11863208, 0.07903592, 0.12895672, 0.08794872, 0.12754003]), 'std_score_time': array([0.00256645, 0.02808788, 0.01344892, 0.00937178, 0.00433803,\n",
+      "       0.0118241 , 0.00293322, 0.01392472, 0.00679051, 0.01718627]), 'param_n_neighbors': masked_array(data=[3, 3, 5, 5, 7, 7, 9, 9, 11, 11],\n",
       "             mask=[False, False, False, False, False, False, False, False,\n",
       "                   False, False],\n",
       "       fill_value=999999), 'param_weights': masked_array(data=['uniform', 'distance', 'uniform', 'distance',\n",
@@ -343,13 +343,13 @@
       "                   'uniform', 'distance'],\n",
       "             mask=[False, False, False, False, False, False, False, False,\n",
       "                   False, False],\n",
-      "       fill_value='?',\n",
+      "       fill_value=np.str_('?'),\n",
       "            dtype=object), 'params': [{'n_neighbors': 3, 'weights': 'uniform'}, {'n_neighbors': 3, 'weights': 'distance'}, {'n_neighbors': 5, 'weights': 'uniform'}, {'n_neighbors': 5, 'weights': 'distance'}, {'n_neighbors': 7, 'weights': 'uniform'}, {'n_neighbors': 7, 'weights': 'distance'}, {'n_neighbors': 9, 'weights': 'uniform'}, {'n_neighbors': 9, 'weights': 'distance'}, {'n_neighbors': 11, 'weights': 'uniform'}, {'n_neighbors': 11, 'weights': 'distance'}], 'split0_test_score': array([0.44054307, 0.45856742, 0.45388577, 0.47284644, 0.45599251,\n",
       "       0.47752809, 0.45552434, 0.48197566, 0.45107678, 0.47776217]), 'split1_test_score': array([0.43151487, 0.45258722, 0.44954343, 0.46921096, 0.45703582,\n",
       "       0.47436198, 0.45024584, 0.47600094, 0.44884102, 0.47459611]), 'split2_test_score': array([0.42378834, 0.44509483, 0.44298759, 0.46148443, 0.45422618,\n",
       "       0.47272302, 0.45282135, 0.47412784, 0.45094826, 0.47459611]), 'mean_test_score': array([0.43194876, 0.45208315, 0.4488056 , 0.46784728, 0.4557515 ,\n",
       "       0.47487103, 0.45286385, 0.47736814, 0.45028869, 0.47565147]), 'std_test_score': array([0.00684697, 0.0055117 , 0.00447965, 0.00473769, 0.00115962,\n",
-      "       0.00199441, 0.00215515, 0.00334654, 0.001025  , 0.00149249]), 'rank_test_score': array([10,  7,  9,  4,  5,  3,  6,  1,  8,  2])}\n",
+      "       0.00199441, 0.00215515, 0.00334654, 0.001025  , 0.00149249]), 'rank_test_score': array([10,  7,  9,  4,  5,  3,  6,  1,  8,  2], dtype=int32)}\n",
       "n_neighbors=3: 平均得分=0.4319 (±0.0068)\n",
       "n_neighbors=3: 平均得分=0.4521 (±0.0055)\n",
       "n_neighbors=5: 平均得分=0.4488 (±0.0045)\n",
