--- a/day13/1-KNN实战Facebook数据-网格搜索.ipynb
+++ b/day13/1-KNN实战Facebook数据-网格搜索.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "f0e5a3f9",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "d5ca2056672cdd19",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "12f88683",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "add2d3df",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "9c69dd8f366e7cdf",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "073089b9",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "50f523f1",
    "metadata": {},
    "outputs": [
@@ -331,11 +331,11 @@
       "最佳模型在测试集上的准确率：0.4953\n",
       "\n",
       "所有参数组合的结果：\n",
-      "{'mean_fit_time': array([0.01368531, 0.0150574 , 0.01186784, 0.01412535, 0.01091162,\n",
-      "       0.01214266, 0.01336177, 0.01032639, 0.01100938, 0.01229294]), 'std_fit_time': array([0.00066551, 0.0011102 , 0.00071944, 0.00120557, 0.00057757,\n",
-      "       0.00106632, 0.00097676, 0.00062589, 0.00099363, 0.00047886]), 'mean_score_time': array([0.04881763, 0.10847902, 0.06652594, 0.12148134, 0.06968888,\n",
-      "       0.11863208, 0.07903592, 0.12895672, 0.08794872, 0.12754003]), 'std_score_time': array([0.00256645, 0.02808788, 0.01344892, 0.00937178, 0.00433803,\n",
-      "       0.0118241 , 0.00293322, 0.01392472, 0.00679051, 0.01718627]), 'param_n_neighbors': masked_array(data=[3, 3, 5, 5, 7, 7, 9, 9, 11, 11],\n",
+      "{'mean_fit_time': array([0.01015949, 0.0111142 , 0.01294923, 0.01349401, 0.01318248,\n",
+      "       0.01287413, 0.01263197, 0.01188119, 0.01375095, 0.01258214]), 'std_fit_time': array([0.00095628, 0.00063442, 0.00117352, 0.00266934, 0.0002736 ,\n",
+      "       0.00443503, 0.00240461, 0.00043603, 0.00094059, 0.00190187]), 'mean_score_time': array([0.05727649, 0.08047247, 0.0757525 , 0.10953069, 0.07005811,\n",
+      "       0.10594972, 0.07284943, 0.11085169, 0.07948693, 0.09394264]), 'std_score_time': array([0.00796915, 0.00646079, 0.01015949, 0.00368731, 0.00347746,\n",
+      "       0.006308  , 0.00293659, 0.00060743, 0.00112794, 0.0036091 ]), 'param_n_neighbors': masked_array(data=[3, 3, 5, 5, 7, 7, 9, 9, 11, 11],\n",
       "             mask=[False, False, False, False, False, False, False, False,\n",
       "                   False, False],\n",
       "       fill_value=999999), 'param_weights': masked_array(data=['uniform', 'distance', 'uniform', 'distance',\n",
