--- a/day12/5-特征选择.ipynb
+++ b/day12/5-特征选择.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "3e68ac18",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,10 @@
       " [1 4]\n",
       " [1 1]]\n",
       "剩余的列索引为： [1 2]\n",
-      "剩余列的方差值为： [0.22222222 2.88888889]\n"
+      "剩余列的方差值为： [0.22222222 2.88888889]\n",
+      "[False  True  True False] <class 'numpy.ndarray'>\n",
+      "(array([1, 2]),) (array([1, 2]),)\n",
+      "np.where(selector.get_support())的形状: (1, 2)\n"
      ]
     }
    ],
@@ -55,7 +58,13 @@
     "# 7. 输出剩余列的方差值\n",
     "feature_variances = selector.variances_\n",
     "remaining_variances = feature_variances[selector.get_support()]\n",
-    "print(\"剩余列的方差值为：\", remaining_variances)"
+    "print(\"剩余列的方差值为：\", remaining_variances)\n",
+    "\n",
+    "\n",
+    "print(selector.get_support(),type(selector.get_support()))\n",
+    "print(np.where(selector.get_support()),np.where(selector.get_support()))\n",
+    "# 打印np.where(selector.get_support())的形状\n",
+    "print(\"np.where(selector.get_support())的形状:\", np.array(np.where(selector.get_support())).shape)\n"
    ]
   },
   {
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "8e42bfd3",
    "metadata": {},
    "outputs": [
@@ -82,6 +91,8 @@
       " [0 1 1 3]]\n",
       "原始数据每列的方差：\n",
       "[0.         0.22222222 2.88888889 0.        ]\n",
+      "原始数据结构：3个数据, 4维\n",
+      "降维后特征数：3个数据, 2维\n",
       "降维后的数据：\n",
       "[[-1.76504522  0.32686023]\n",
       " [ 2.35339362  0.13074409]\n",
@@ -119,6 +130,10 @@
     "X_pca = pca.fit_transform(X)\n",
     "\n",
     "# 5. 输出结果\n",
+    "print(f\"原始数据结构：{X.shape[0]}个数据, {X.shape[1]}维\")\n",
+    "print(f\"降维后特征数：{X_pca.shape[0]}个数据, {X_pca.shape[1]}维\")\n",
+    "\n",
+    "\n",
     "print(\"降维后的数据：\")\n",
     "print(X_pca)\n",
     "\n",
