--- a/day13_test/test.ipynb
+++ b/day13_test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ed57585a",
    "metadata": {},
    "outputs": [
@@ -17,11 +17,11 @@
       "特征列： ['x', 'y', 'accuracy', 'day', 'hour', 'weekday']\n",
       "前5行特征数据：\n",
       "           x       y  accuracy  day  hour  weekday\n",
-      "600   1.2214  2.7023        17    1    18        3\n",
-      "957   1.1832  2.6891        58   10     2        5\n",
-      "4345  1.1935  2.6550        11    5    15        0\n",
-      "4735  1.1452  2.6074        49    6    23        1\n",
-      "5580  1.0089  2.7287        19    9    11        4\n"
+      "600   1.2214  2.7023        17   15     9        6\n",
+      "957   1.1832  2.6891        58   30    11        2\n",
+      "4345  1.1935  2.6550        11    5    20        0\n",
+      "4735  1.1452  2.6074        49   24    15        3\n",
+      "5580  1.0089  2.7287        19   24    14        0\n"
      ]
     }
    ],
@@ -39,9 +39,8 @@
     "\n",
     "# 删除不需要的列，保留特征列\n",
     "X = data.drop(['row_id', 'place_id'], axis=1)\n",
-    "\n",
     "# 处理time列，转换为datetime格式并提取时间特征\n",
-    "X['time'] = pd.to_datetime(X['time'], unit='s')\n",
+    "X['time'] = pd.to_datetime(X['time'], unit='m')  # 单位改为分钟\n",
     "X['day'] = X['time'].dt.day  # 提取日期中的天数\n",
     "X['hour'] = X['time'].dt.hour  # 提取时间中的小时\n",
     "X['weekday'] = X['time'].dt.weekday  # 提取星期几（0=周一，6=周日）\n",
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "12e84f62",
    "metadata": {},
    "outputs": [
@@ -162,7 +161,7 @@
       "\n",
       "开始训练KNN模型...\n",
       "\n",
-      "KNN模型准确率：0.4991\n"
+      "KNN模型准确率：0.5313\n"
      ]
     }
    ],
@@ -187,7 +186,7 @@
     "X_test_scaled = scaler.transform(X_test)   #不会再次计算均值和方差，而是直接进行标准化\n",
     "\n",
     "# 创建KNN分类器\n",
-    "knn = KNeighborsClassifier(n_neighbors=9,weights='distance')\n",
+    "knn = KNeighborsClassifier(n_neighbors=11,weights='distance')\n",
     "\n",
     "# 训练模型\n",
     "print(\"\\n开始训练KNN模型...\")\n",
@@ -200,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "296ecbaf",
    "metadata": {},
    "outputs": [
@@ -209,11 +208,11 @@
      "output_type": "stream",
      "text": [
       "开始网格搜索...\n",
-      "Fitting 3 folds for each of 10 candidates, totalling 30 fits\n",
+      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n",
       "\n",
-      "最佳参数：{'n_neighbors': 9, 'weights': 'distance'}\n",
-      "最佳交叉验证得分：0.4874\n",
-      "最佳模型在测试集上的准确率：0.4991\n"
+      "最佳参数：{'n_neighbors': 11, 'weights': 'distance'}\n",
+      "最佳交叉验证得分：0.5287\n",
+      "最佳模型在测试集上的准确率：0.5383\n"
      ]
     }
    ],
@@ -223,7 +222,7 @@
     "\n",
     "# 定义参数网格\n",
     "param_grid = {\n",
-    "    'n_neighbors': [3, 5, 7, 9, 11],\n",
+    "    'n_neighbors': [9, 11,13,15,17,19],\n",
     "    'weights': ['uniform', 'distance'] #uniform: 每个邻居的权重相同 distance: 根据距离进行加权，距离越近权重越大，距离越远权重越小\n",
     "}\n",
     "\n",
