--- a/day14/1-朴素贝叶斯实现新闻分类.ipynb
+++ b/day14/1-朴素贝叶斯实现新闻分类.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -45,6 +45,14 @@
       "target最小值： 0\n",
       "target最大值： 19\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\python312\\Lib\\site-packages\\sklearn\\datasets\\_twenty_newsgroups.py:310: VisibleDeprecationWarning: dtype(): align should be passed as Python or NumPy boolean but got `align=0`. Did you mean to pass a tuple to create a subarray type? (Deprecated NumPy 2.4)\n",
+      "  cache = pickle.loads(uncompressed_content)\n"
+     ]
     }
    ],
    "source": [
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1c325e4a",
    "metadata": {},
    "outputs": [
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "81eba5a0",
    "metadata": {},
    "outputs": [
@@ -111,7 +119,7 @@
        "4712"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "196388b0",
    "metadata": {},
    "outputs": [
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "f25e4cf0",
    "metadata": {},
    "outputs": [
@@ -222,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "54bcf0d8",
    "metadata": {},
    "outputs": [
