--- a/day14/1-朴素贝叶斯实现新闻分类.ipynb
+++ b/day14/1-朴素贝叶斯实现新闻分类.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -11,57 +11,14 @@
     },
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "特征（文本数据）示例：\n",
-      "From: Mamatha Devineni Ratnam <mr47+@andrew.cmu.edu>\n",
-      "Subject: Pens fans reactions\n",
-      "Organization: Post Office, Carnegie Mellon, Pittsburgh, PA\n",
-      "Lines: 12\n",
-      "NNTP-Posting-Host: po4.andrew.cmu.edu\n",
-      "\n",
-      "\n",
-      "\n",
-      "I am sure some bashers of Pens fans are pretty confused about the lack\n",
-      "of any kind of posts about the recent Pens massacre of the Devils. Actually,\n",
-      "I am  bit puzzled too and a bit relieved. However, I am going to put an end\n",
-      "to non-PIttsburghers' relief with a bit of praise for the Pens. Man, they\n",
-      "are killing those Devils worse than I thought. Jagr just showed you why\n",
-      "he is much better than his regular season stats. He is also a lot\n",
-      "fo fun to watch in the playoffs. Bowman should let JAgr have a lot of\n",
-      "fun in the next couple of games since the Pens are going to beat the pulp out of Jersey anyway. I was very disappointed not to see the Islanders lose the final\n",
-      "regular season game.          PENS RULE!!!\n",
-      "\n",
-      "\n",
-      "\n",
-      "标签示例： 10\n",
-      "标签总数： 18846\n",
-      "类别名称： ['alt.atheism', 'comp.graphics', 'comp.os.ms-windows.misc', 'comp.sys.ibm.pc.hardware', 'comp.sys.mac.hardware', 'comp.windows.x', 'misc.forsale', 'rec.autos', 'rec.motorcycles', 'rec.sport.baseball', 'rec.sport.hockey', 'sci.crypt', 'sci.electronics', 'sci.med', 'sci.space', 'soc.religion.christian', 'talk.politics.guns', 'talk.politics.mideast', 'talk.politics.misc', 'talk.religion.misc']\n",
-      "data类型： <class 'list'>\n",
-      "target类型： <class 'numpy.ndarray'>\n",
-      "target最小值： 0\n",
-      "target最大值： 19\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "e:\\python312\\Lib\\site-packages\\sklearn\\datasets\\_twenty_newsgroups.py:310: VisibleDeprecationWarning: dtype(): align should be passed as Python or NumPy boolean but got `align=0`. Did you mean to pass a tuple to create a subarray type? (Deprecated NumPy 2.4)\n",
-      "  cache = pickle.loads(uncompressed_content)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.datasets import fetch_20newsgroups\n",
     "\n",
     "# 加载20类新闻数据集\n",
     "newsgroups = fetch_20newsgroups(data_home='data',subset='all')\n",
     "\n",
-    "# 输出特征和标签\n",
+    "\n",
     "print(\"特征（文本数据）示例：\")\n",
     "print(newsgroups.data[0])\n",
     "print(\"\\n标签示例：\", newsgroups.target[0])\n",
@@ -76,26 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1c325e4a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "处理后的特征数： 146060\n",
-      "['o_uv' 'o_wcp_' 'o_yd' 'oa' 'oa0' 'oa13' 'oa2' 'oa3' 'oa44o' 'oa4no']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 数据分割，tfidf\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "# 划分训练集和测试集\n",
-    "X_train, X_test, y_train, y_test = train_test_split(newsgroups.data, newsgroups.target, test_size=0.25, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    newsgroups.data, newsgroups.target, test_size=0.25, random_state=42)\n",
     "\n",
     "# 对训练集进行TF-IDF向量化\n",
     "vectorizer = TfidfVectorizer()\n",
@@ -104,73 +53,26 @@
     "# 输出处理后的特征数\n",
     "print(\"处理后的特征数：\", X_train_tfidf.shape[1])\n",
     "\n",
+    "\n",
     "print(vectorizer.get_feature_names_out()[100000:100010])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "81eba5a0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4712"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "196388b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "准确率： 0.8425297113752123\n",
-      "\n",
-      "详细分类报告：\n",
-      "                           precision    recall  f1-score   support\n",
-      "\n",
-      "             alt.atheism       0.88      0.72      0.79       198\n",
-      "           comp.graphics       0.86      0.79      0.82       245\n",
-      " comp.os.ms-windows.misc       0.88      0.83      0.85       242\n",
-      "comp.sys.ibm.pc.hardware       0.66      0.86      0.75       238\n",
-      "   comp.sys.mac.hardware       0.95      0.84      0.89       250\n",
-      "          comp.windows.x       0.96      0.80      0.87       260\n",
-      "            misc.forsale       0.96      0.66      0.78       241\n",
-      "               rec.autos       0.89      0.93      0.91       244\n",
-      "         rec.motorcycles       0.91      0.95      0.93       219\n",
-      "      rec.sport.baseball       0.96      0.94      0.95       261\n",
-      "        rec.sport.hockey       0.90      0.98      0.94       245\n",
-      "               sci.crypt       0.78      0.98      0.87       251\n",
-      "         sci.electronics       0.92      0.80      0.86       249\n",
-      "                 sci.med       0.97      0.88      0.92       249\n",
-      "               sci.space       0.88      0.98      0.93       240\n",
-      "  soc.religion.christian       0.49      0.99      0.66       245\n",
-      "      talk.politics.guns       0.78      0.96      0.86       230\n",
-      "   talk.politics.mideast       0.93      0.97      0.95       234\n",
-      "      talk.politics.misc       1.00      0.57      0.73       207\n",
-      "      talk.religion.misc       1.00      0.16      0.28       164\n",
-      "\n",
-      "                accuracy                           0.84      4712\n",
-      "               macro avg       0.88      0.83      0.83      4712\n",
-      "            weighted avg       0.88      0.84      0.84      4712\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
@@ -192,18 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f25e4cf0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "alt.atheism 类别的精确率（手动计算）： 0.8827160493827161\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 手动计算 alt.atheism 类别的精确率\n",
     "\n",
@@ -230,20 +124,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "54bcf0d8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y_pred_binary: [0 0 0 ... 0 0 0]\n",
-      "y_true_binary: [0 0 0 ... 0 0 0]\n",
-      "alt.atheism 类别的AUC值（使用predict）： 0.8590065475311377\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 相对没那么重要,了解\n",
     "from sklearn.metrics import roc_auc_score\n",
