--- a/day14/2-决策树-随机森林实战.ipynb
+++ b/day14/2-决策树-随机森林实战.ipynb
@@ -505,7 +505,16 @@
    "execution_count": null,
    "id": "d1af7754",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\python312\\Lib\\site-packages\\joblib\\externals\\loky\\process_executor.py:782: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# 针对泰坦尼克号数据，设计一个更适合的网格搜索超参数集合（可适当缩小范围以便加速，也兼容典型特征数量/特性）\n",
     "param_grid = {\n",
