--- a/day14/2-决策树-随机森林实战.ipynb
+++ b/day14/2-决策树-随机森林实战.ipynb
@@ -415,12 +415,66 @@
     "               class_names=[\"not survived\", \"survived\"],\n",
     "               filled=True,\n",
     "               rounded=True)\n",
-    "plt.savefig('titanic.svg')\n"
+    "plt.savefig('titanic.svg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "id": "91a9e378",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "开始网格搜索...\n",
+      "Fitting 5 folds for each of 90 candidates, totalling 450 fits\n",
+      "最佳参数: {'criterion': 'entropy', 'max_depth': 4, 'min_samples_leaf': 4, 'min_samples_split': 2}\n",
+      "最佳CV得分: 0.8200\n",
+      "最佳模型测试集准确率: 0.8327\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 网格搜索\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# 定义参数网格\n",
+    "param_grid = {\n",
+    "    'criterion': ['gini', 'entropy'],           # 划分标准\n",
+    "    'max_depth': [4, 6, 8, 10, 12],             # 树的深度\n",
+    "    'min_samples_split': [2, 5, 10],            # 内部节点最小样本数\n",
+    "    'min_samples_leaf': [1, 2, 4]               # 叶子节点最小样本数\n",
+    "}\n",
+    "\n",
+    "# 初始化网格搜索\n",
+    "grid_search = GridSearchCV(\n",
+    "    estimator=DecisionTreeClassifier(random_state=42),\n",
+    "    param_grid=param_grid,\n",
+    "    cv=5,\n",
+    "    scoring='accuracy',\n",
+    "    n_jobs=-1,\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "# 执行搜索\n",
+    "print(\"\\n开始网格搜索...\")\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# 输出结果\n",
+    "print(\"最佳参数:\", grid_search.best_params_)\n",
+    "print(f\"最佳CV得分: {grid_search.best_score_:.4f}\")\n",
+    "\n",
+    "# 在测试集验证\n",
+    "best_acc = grid_search.best_estimator_.score(X_test, y_test)\n",
+    "print(f\"最佳模型测试集准确率: {best_acc:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "94ea2866",
    "metadata": {},
    "outputs": [
@@ -470,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "82c2854e",
    "metadata": {},
    "outputs": [
@@ -502,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d1af7754",
    "metadata": {},
    "outputs": [
@@ -512,6 +566,16 @@
      "text": [
       "e:\\python312\\Lib\\site-packages\\joblib\\externals\\loky\\process_executor.py:782: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
       "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "最佳参数: {'criterion': 'entropy', 'max_depth': 5, 'max_features': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 300, 'random_state': 42}\n",
+      "最佳准确率: 0.8276\n",
+      "最优模型使用的特征数: 6\n",
+      "最优模型在测试集上的准确率: 0.8327\n"
      ]
     }
    ],
