--- a/day14_test/test1.ipynb
+++ b/day14_test/test1.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "18d7c6e3",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alt.atheism 类别的精确率: 1.0\n"
+      "[ 9 12 14 ...  9  3  8]\n",
+      "alt.atheism 类别的精确率: 0.8827160493827161\n"
      ]
     }
    ],
@@ -108,6 +109,39 @@
     "actual_alt_atheism = (y_test == alt_atheism_index)\n",
     "precision_atheism = precision_score(actual_alt_atheism, predicted_as_alt_atheism)\n",
     "print(\"alt.atheism 类别的精确率:\", precision_atheism)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9230385",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_pred_binary: [0 0 0 ... 0 0 0]\n",
+      "y_true_binary: [0 0 0 ... 0 0 0]\n",
+      "alt.atheism 类别的AUC值（使用predict）： 0.8590065475311377\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "# alt.atheism 类别的索引\n",
+    "alt_atheism_index = newsgroups.target_names.index('alt.atheism')\n",
+    "\n",
+    "# 使用 predict 得到分类结果\n",
+    "y_pred_binary = (nb.predict(X_test_tfidf) == alt_atheism_index).astype(int)\n",
+    "y_true_binary = (y_test == alt_atheism_index).astype(int)\n",
+    "print(\"y_pred_binary:\", y_pred_binary)\n",
+    "print(\"y_true_binary:\", y_true_binary)\n",
+    "\n",
+    "auc_score = roc_auc_score(y_true_binary, y_pred_binary)\n",
+    "\n",
+    "print(\"alt.atheism 类别的AUC值（使用predict）：\", auc_score)"
    ]
   }
  ],
