--- a/day14_test/test2.ipynb
+++ b/day14_test/test2.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "fcf0fd27",
    "metadata": {},
    "outputs": [
@@ -302,22 +302,31 @@
       "e:\\python312\\Lib\\site-packages\\joblib\\externals\\loky\\process_executor.py:782: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "最佳参数: {'class_weight': None, 'criterion': 'entropy', 'max_depth': 5, 'max_features': 0.5, 'min_samples_leaf': 1, 'min_samples_split': 10, 'n_estimators': 300, 'random_state': 42}\n",
+      "最佳准确率: 0.8276\n",
+      "最优模型使用的特征数: 0.5\n",
+      "最优模型在测试集上的准确率: 0.8251\n"
+     ]
     }
    ],
    "source": [
     "# 针对泰坦尼克号数据，设计一个更适合的网格搜索超参数集合（可适当缩小范围以便加速，也兼容典型特征数量/特性）\n",
     "param_grid = {\n",
-    "    'n_estimators': [100, 200, 300, 400, 500],          # 增加更多树，提升群体智慧\n",
-    "    'max_depth': [3, 5, 7, 10, None],                   # 加深树深度，捕获更复杂模式\n",
-    "    'criterion': ['gini', 'entropy'],                   # 划分标准\n",
-    "    'max_features': ['sqrt', 'log2', 0.5, 0.7, None],   # 增加特征比例选项，丰富子树多样性\n",
-    "    'min_samples_split': [2, 5, 10, 15],                # 扩大最小分裂样本数范围\n",
-    "    'min_samples_leaf': [1, 2, 4, 6],                   # 扩大叶子最小样本数范围\n",
-    "    'bootstrap': [True, False],                         # 是否使用自助采样，增加模型多样性\n",
-    "    'oob_score': [True, False],                         # 是否使用袋外样本评估，辅助模型选择\n",
-    "    'class_weight': [None, 'balanced'],                 # 处理类别不平衡，提升群体决策公平性\n",
-    "    'random_state': [42]                                # 保证可复现\n",
+    "    'n_estimators': [100, 200, 300],          # 减少树的数量范围\n",
+    "    'max_depth': [3, 5, 7, None],             # 缩小深度范围\n",
+    "    'criterion': ['gini', 'entropy'],         # 划分标准\n",
+    "    'max_features': ['sqrt', 'log2', 0.5],    # 减少特征比例选项\n",
+    "    'min_samples_split': [2, 5, 10],          # 缩小最小分裂样本数范围\n",
+    "    'min_samples_leaf': [1, 2, 4],            # 缩小叶子最小样本数范围\n",
+    "    'class_weight': [None, 'balanced'],     # 处理类别不平衡\n",
+    "    'random_state': [42]                      # 保证可复现\n",
     "}\n",
+    "\n",
     "\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "# 定义网格搜索对象，对随机森林分类器进行超参数搜索\n",
